ci: wire SOPS_AGE_KEY + fix decrypt

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,6 +41,7 @@ jobs:
       - name: Decrypt tfvars (${{ matrix.env }})
         run: |
           set -euo pipefail
+          test -n "${SOPS_AGE_KEY:-}"
           sops --decrypt "infra/terraform/envs/${{ matrix.env }}/${{ matrix.env }}.secrets.enc.tfvars" \
             > "/tmp/${{ matrix.env }}.secrets.tfvars"
 
