--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,18 +52,8 @@ jobs:
         run: |
           set -euo pipefail
           test -n "${SOPS_AGE_KEY:-}"
-          shopt -s nullglob
-          found=false
-          for f in *.enc.tfvars; do
-            found=true
-            out="${f%.enc.tfvars}.tfvars"
-            sops -d "$f" > "$out"
-          done
-          if [ "$found" != "true" ]; then
-            echo "No encrypted tfvars found" >&2
-            exit 1
-          fi
-          ls -l *.tfvars
+          sops -d "${{ matrix.env }}.secrets.enc.tfvars" > secrets.tfvars
+          ls -l secrets.tfvars
 
       - name: Sync Terraform modules into environment
         run: |
@@ -84,17 +74,12 @@ jobs:
           if [ -f terraform.tfvars ]; then
             args+=(-var-file=terraform.tfvars)
           fi
-          shopt -s nullglob
-          for vf in *.tfvars; do
-            case "$vf" in
-              terraform.tfvars) continue ;;
-              *.enc.tfvars) continue ;;
-            esac
-            args+=(-var-file="$vf")
-          done
+          if [ -f secrets.tfvars ]; then
+            args+=(-var-file=secrets.tfvars)
+          fi
           terraform plan "${args[@]}"
 
       - name: Cleanup decrypted secrets (${{ matrix.env }})
         if: always()
         working-directory: infra/terraform/envs/${{ matrix.env }}
-        run: rm -f *.secrets.tfvars
+        run: rm -f secrets.tfvars
