IaC: align prod env with dev/stage (vars, encrypted secrets, backend)

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,4 @@ infra/terraform/envs/**/zz_secrets.auto.tfvars.json
 
 # Devcontainer
 .devcontainer/devcontainer.env
+infra/terraform/envs/*/*.secrets.tfvars
