--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -14,14 +14,20 @@
   "license": "ISC",
   "description": "",
   "type": "module",
-  "devDependencies": {
-    "@vitest/coverage-v8": "^3.2.4",
-    "vitest": "^3.2.4"
-  },
   "dependencies": {
+    "@lokaltreu/types": "1.0.0",
+    "@opentelemetry/api": "^1.9.0",
+    "@upstash/redis": "^1.31.3",
+    "@noble/ed25519": "^2.1.0",
     "@opentelemetry/auto-instrumentations-node": "^0.66.0",
     "@opentelemetry/exporter-trace-otlp-grpc": "^0.207.0",
     "@opentelemetry/sdk-node": "^0.207.0",
+    "express": "^4.21.1",
     "tsx": "^4.20.6"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.21",
+    "@vitest/coverage-v8": "^3.2.4",
+    "vitest": "^3.2.4"
   }
 }
