--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -5,6 +5,9 @@
     "rootDir": "./src",
     "composite": true
   },
+  "references": [
+    { "path": "../../packages/types" }
+  ],
   "include": ["src/**/*.ts"],
   "exclude": ["node_modules", "dist"]
 }
