--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,6 +2,8 @@ name: ci
 on:
   pull_request:
     branches: [main]
+env:
+  BOOTSTRAP: "1"
 permissions:
   contents: read
 concurrency:
@@ -16,10 +18,15 @@ jobs:
         with: { fetch-depth: 0 }
       - uses: actions/setup-node@v4
         with: { node-version: 20, cache: 'npm' }
-      - run: npm ci
-      - run: npm run lint
+      - name: Install
+        run: npm ci || npm install --no-audit --no-fund
+      - name: Lint
+        if: env.BOOTSTRAP == '0'
+        run: npm run lint
       - run: npm run build
-      - run: npm test --workspaces -- --coverage
+      - name: Tests
+        if: env.BOOTSTRAP == '0'
+        run: npm test --workspaces -- --coverage
       - name: OpenAPI types sync
         run: |
           npx openapi-typescript apps/api/openapi/lokaltreu-openapi-v2.0.yaml -o packages/types/src/index.d.ts
