--- a/.github/workflows/gdpr-compliance.yml
+++ b/.github/workflows/gdpr-compliance.yml
@@ -2,6 +2,8 @@ name: gdpr-compliance
 on:
   pull_request:
     branches: [main]
+env:
+  BOOTSTRAP: "1"
 permissions:
   contents: read
 concurrency:
