chore: run pre-commit (EU scan + fmt + validate)

--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,4 @@ infra/terraform/secrets/*.tfvars
 # Testartefakte
 infra/terraform/secrets/test.enc.tfvars
 *.tsbuildinfo
+infra/terraform/local.auto.tfvars
